fixed gap between pagination buttons

--- a/app/styles/components/pagination.css
+++ b/app/styles/components/pagination.css
@@ -1,9 +1,9 @@
 .pagination {
-  @apply flex justify-center items-center gap-2;
+  @apply flex justify-center items-center;
 }
 .pagination li a,
 .pagination li button {
-  @apply text-base border border-gray-200 px-2 py-1 rounded inline-block;
+  @apply text-base border border-gray-200 px-3 py-1 mx-1 rounded inline-block;
 
   &:hover {
     @apply border-purple-500;
@@ -11,5 +11,5 @@
 }
 
 .pagination li.current {
-  @apply text-base border px-2 py-1 rounded inline-block bg-purple-500 border-purple-500 text-purple-100;
+  @apply text-base border px-3 py-1 mx-1 rounded inline-block bg-purple-500 border-purple-500 text-purple-100;
 }
